appId: com.fasaba.Grouptivate
---
- launchApp
- runFlow: subflows/createAccount.yml
- tapOn:
    id: "add-group-button"
- tapOn:
    below: "Group Name"
- inputText: "My Group"
- pressKey: Enter
- tapOn: "Create"
