appId: com.fasaba.Grouptivate
---
- tapOn: "Sign up"
- tapOn:
    below: "Username"
- inputText: "testing"
- tapOn:
    below: "Password"
- inputText: "Password1"
- pressKey: Enter
- tapOn:
    text: "Create account"
    index: 1
