appId: com.fasaba.Grouptivate
---
- tapOn: "Sign up"
- tapOn:
    below: "Username"
- inputText: ${USERNAME}
- tapOn:
    below: "Password"
- inputText: ${PASSWORD}
- pressKey: Enter
- tapOn:
    text: "Create account"
    index: 1
